@@ -84,3 +84,10 @@ class strings:
 		notregistered = u"Lo siento. Usted no parece estar registrado con este transporte. Por favor, regístrese e inténtelo nuevamente. Si usted está teniendo problemas para registrarse, por favor, contacte su administrador Jabber."
 		waitforlogin = u"Lo siento, este mensaje no puede ser enviado aún.  Por favor inténtelo nuevamente cuando el transporte haya terminado de conectarse."
 		gatewaytranslator = u"Ingrese el número de ICQ del usuario."
+
+	class fr: # French - KAeL (kael@crocobox.org)
+		registertext = u"Veuillez entrer votre identifiant ICQ dans le champ nom et votre mot de passe"
+		notloggedin = u"Erreur. Vous devez vous connecter au transport avant d\'envoyer des messages."
+		notregistered = u"Désolé. Vous ne semblez pas être enregistré avec ce transport. Veuillez vous enregistrer et réessayer. Si vous avez des difficultés à vous enregistrer, veuillez contacter votre administrateur Jabber."
+		waitforlogin = u"Désolé, ce message ne peut être délivré pour le moment. Veuillez réessayer plus tard quand le transport se sera identifié."
+		gatewaytranslator = u"Entrez l\'identifiant ICQ."
